@@ -29,6 +29,9 @@ x2goclient (4.1.1.1-0x2go1) UNRELEASED; urgency=medium
       directly.
     - src/sshmasterconnection.cpp: error out with a useful error message in
       case no password has been provided when doing password authentication.
+    - src/sshmasterconnection.cpp: don't output an empty error message if
+      password authencation has been requested but the server does not support
+      this mechanism.
 
   [ Oleksandr Shneyder ]
   * New upstream version (4.1.1.1):
